# KwalityOfLife

./: .gitignore  README.md  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  rubricitems.py
api/: serializers.py  urls.py  views.py
comment/: forms.py  models.py  views.py
comment/migrations/: 0001_initial.py  0002_auto_20210707_1848.py  0002_initial.py  0003_alter_comment_created_at.py  0003_auto_20210707_1855.py  0004_alter_comment_created_at.py  0004_auto_20210707_1900.py  0005_auto_20210707_1906.py  0006_auto_20210707_1910.py  0007_auto_20210707_1942.py
customuser/: admin.py  forms.py  models.py  views.py
customuser/migrations/: 0001_initial.py  0002_auto_20210707_1848.py  0003_auto_20210707_1942.py  0004_alter_customuser_avatar.py
directmessages/: admin.py  apps.py  forms.py  models.py  views.py
directmessages/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json  test.js
frontend/kol/: views.py
frontend/public/: index.html
frontend/src/: App.js  Reducer.js  Root.js  configureStore.js  index.js
kol/: asgi.py  settings.py  test.py  urls.py  wsgi.py
notifications/: admin.py  models.py  views.py
notifications/migrations/: 0001_initial.py
posts/: forms.py  models.py  serializers.py  views.py
posts/migrations/: 0001_initial.py  0002_auto_20210706_1711.py  (+2 more)
suggestion/: apps.py  forms.py  views.py
templates/: _base.html  author_detail.html  error_404.html  error_500.html  form.html  message.html  notifications.html  post_index.html  postdetail.html  productindex.html
(+62 files in other folders)
