[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["Leftyxiv <manny@aledoux.net>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
django-rest-framework = "^0.1.0"
Pillow = "^8.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
