[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["Leftyxiv <manny@aledoux.net>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
Pillow = "^8.3.0"
python-dotenv = "^0.18.0"
django-cors-headers = "^3.7.0"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^2.4.0"
djoser = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
